API changes implemented. Search visuals updated.
